<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBackgroundColor"
    tools:context=".ui.fragments.RecipesBottomSheetFragment">


    <TextView
        android:id="@+id/mealtype_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealtype_title_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mealtype_chipgroup"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@id/maincourse_chip">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maincourse_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/main_course"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"
                    android:id="@+id/sidedish_chip"
                    android:text="@string/side_dish"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dessert_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/dessert"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/appetizer_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/appetizer"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/salad_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/salad"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bread_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/bread"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/breakfast_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/breakfast"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/soup_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/soup"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/beverage_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/beverage"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sauce_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/sauce"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/marinade_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/marinade"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fingerfood_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/fingerfood"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/snack_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/snack"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/drink_chip"
                    style="@style/CustomChipStyle"
                    android:text="@string/drink"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/diet_type_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mealtype_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_scrollview" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_title_textView"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/diet_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@id/glutenfree_diet_chip"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/glutenfree_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/glutenfree" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ketogenic_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/ketogenic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegetarian_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/vegetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/lactovegetarian_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/lacto_vegetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ovovegetarian_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/ovo_vegetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegan_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/vegan" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pescetarian_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/pescetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/paleo_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/paleo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/primal_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/primal" />

            <com.google.android.material.chip.Chip
                android:id="@+id/low_fodmap_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/low_fodmap" />

            <com.google.android.material.chip.Chip
                android:id="@+id/whole30_diet_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/whole30" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>